2006-04-02  Bruno Haible  <bruno@clisp.org>

	* Makevars (XGETTEXT_OPTIONS): Add keywords 'proper_name' and
	'proper_name_utf8'.

2005-10-18  Bruno Haible  <bruno@clisp.org>

	* Makevars (USE_MSGCTXT): New macro.
	* Makefile.in.in (GMSGFMT, MSGFMT, XGETTEXT): Define according to the
	value of $(USE_MSGCTXT).

2005-07-26  Bruno Haible  <bruno@clisp.org>

	* Makefile.in.in (datarootdir): New variable.
	Suggested by Stepan Kasal <kasal@ucw.cz>.

2005-03-13  Bruno Haible  <bruno@clisp.org>

	* Makefile.in.in (Makefile): Call config.status with calling convention
	supported since autoconf-2.50.
	Suggested by Alexandre Duret-Lutz <adl@src.lip6.fr>.

2005-05-23  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.5 released.

2005-05-23  Bruno Haible  <bruno@clisp.org>

	* it.po: Update from Marco Colombo <m.colombo@ed.ac.uk>.
	* pl.po: Update from Rafał Maszkowski <rzm@icm.edu.pl>.
	* vi.po: New file, from Clytie Siddall <clytie@riverland.net.au>.
	* zh_TW.po: Update from Abel Cheung <abelcheung@gmail.com>.
	* LINGUAS: Add vi.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.4 released.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* it.po: Update from Marco Colombo <m.colombo@ed.ac.uk>.
	* ru.po: Update from Oleg S. Tihonov <ost@tatnipi.ru>.
	* sv.po: Update from Jan Djärv <jan.h.d@swipnet.se>.

2005-03-14  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.3 released.

2005-03-13  Bruno Haible  <bruno@clisp.org>

	* Makefile.in.in (Makefile): Depend on Makevars.
	Reported by Alexandre Duret-Lutz <adl@src.lip6.fr>.

2005-03-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.in.in (dist2): Fail if some of the files to be distributed
	do not exist or cannot be copied.
	Suggested by Alexandre Duret-Lutz <adl@src.lip6.fr>.

2005-03-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.in.in (DISTFILES): Remove $(DOMAIN).pot, stamp-po.
	(stamp-po): Do nothing if $(DOMAIN).pot does not exist.
	(dist2): Depend on stamp-po. If $(DOMAIN).pot exists, distribute also